test/compile-fail/scope/use-super/top.rhdl
mod a {}
use a::super;
